# rbxmidi

./: Cargo.toml  PACKAGES.md  README.md  RobloxMidi.desktop  example.mid  install.sh  rbxmidi.desktop  shell.nix  todo.txt
mkeypress/: Cargo.toml  README.md  build.rs
mkeypress/examples/: sendkey.rs  test.rs
mkeypress/src/: lib.rs  mkeypress.c  mkeypress.h
src/: key.rs  main.rs  midiloader.rs  state.rs
src/agent/: #init.rs#  .#init.rs  core.rs  init.rs  midi.rs  mod.rs
src/config/: mod.rs
src/midi/: background.rs  convert.rs  data.rs  device.rs  finder.rs  mod.rs
src/ui/: main_ui.rs  mod.rs
