[package]
name = "rbxmidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0" # Cross-platform access to MIDI
fltk = "^1.3" # Cross-platform GUI library
once_cell = "1.13.0" # Global state
midly = "0.5" # MIDI file parser
hashbrown = "0.12.3"

[target.'cfg(target_os = "macos")'.dependencies]
mkeypress = { path = "./mkeypress" }

[target.'cfg(unix)'.dependencies]
enigo = "0.0.14" # Send keypresses on linux and windows(have not tested on windows, break on mac)
